Fix theme list wrap

--- a/src/echos.scss
+++ b/src/echos.scss
@@ -223,6 +223,9 @@ md-list-item.echos-list-item, mat-list-item.echos-list-item {
             content: '';
           }
         }
+		div {
+			white-space: normal!important;
+		}
       }
     }
   }
